修复路径别名问题
