# backend/docs/swagger.json
@@ -533,7 +533,7 @@
                 }
             }
         },
-        "/system/auth/wechatMiniProgramLogin": {
+        "/system/auth/wechatCrmLogin": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -544,8 +544,8 @@
                 "tags": [
                     "SystemAuthController"
                 ],
-                "summary": "微信小程序一键登录",
-                "operationId": "wechatMiniProgramLogin",
+                "summary": "微信小程序客户系统一键登录",
+                "operationId": "wechatCrmLogin",
                 "parameters": [
                     {
                         "description": "微信小程序一键登录登录参数",
